Day18 Super easy day, if you remember your geometry formulas and theorems. I first did not know Shoelace, but Pick after reading it for alternative solutions on Day10. Lucky me, those algorithms are linked on Wikipedia, and it is not hard to implement. However, I struggled a bit with the square-feet requirement, which meant you do not need the "area", you need the actual interior points (plus boundary). Combining Pick and Shoelace gives you the answer we are looking for. Part 1 and part 2 then only differ by their respective parsing method. I also refactored point from int to long, which makes my life easier.